--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,10 @@
         "lib": ["es2020"],
         "outDir": "out",
         "rootDir": "src",
-        "sourceMap": true
+        "sourceMap": true,
+        "skipLibCheck": true,
+        "noUncheckedIndexedAccess": true,
+
     },
     "include": ["src"],
     "exclude": ["node_modules", ".vscode-test"]
