--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
         "moduleResolution": "node",
         "outDir": "out",
         "rootDir": "src",
-        "sourceMap": true
+        "sourceMap": true,
+        "noUncheckedIndexedAccess": true,
+        // "noImplicitReturns": true
+        // "skipLibCheck": true
     },
     "include": ["src"],
     "exclude": ["**/node_modules/**/*", ".vscode-test", "client/node_modules", "server/node_modules"],
