--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/emscripten": "^1.40.0",
     "@types/vscode": "^1.99.1",
+    "change-case": "^5.4.4",
     "itertools-ts": "^2.2.0",
     "tree-sitter": "^0.21.1",
     "tree-sitter-query": "github:tree-sitter-grammars/tree-sitter-query",
